Cambiados algunos twigs. Mejorado summary. Nuevos buildingRatio y researchRatio en Building con sus fixtures.

--- a/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/auction.html.twig
@@ -39,8 +39,8 @@
                         <div class="col-xs-8 text-padded">
                             <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ auction.research.spell.magic|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ auction.research.spell.manaCost|nf }}</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ auction.research.spell.turnCost|nf }}</div>
-                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ auction.research.spell.turnResearch|nf }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ auction.research.spell.turnsCost|nf }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ auction.research.spell.turnsResearch|nf }}</div>
                             <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ auction.research.spell.skill.description|raw }}</div>
                         </div>
                     </div>
