--- a/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Territory/build.html.twig
@@ -46,18 +46,22 @@
                     </div>
                 </div>
                 <div class="panel-footer text-center">
+                    {% if construction.building.name != 'Tierras' %}
                     <form id="construction{{ construction.id }}" name="construction{{ construction.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_territory_build') }}" method="post">
                         <div class="form-group has-feedback">
                             <div class="input-group">
                                 <div class="input-group-btn">
-                                    <button type="submit" class="btn btn-default" {% if construction.building.name == 'Tierras'  or player.building('Tierras').quantity <= 0%}disabled{% endif %}><i class="fa fa-fw fa-lg fa-wrench"></i><span class="hidden-xs">Construir</span></button>
+                                    <button type="submit" class="btn btn-default" {% if player.building('Tierras').quantity <= 0%}disabled{% endif %}><i class="fa fa-fw fa-lg fa-wrench"></i><span class="hidden-xs">Construir</span></button>
                                 </div>
-                                <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ player.building('Tierras').quantity }}" value="0" {% if construction.building.name == 'Tierras' or player.building('Tierras').quantity <= 0 %}disabled{% endif %} required />
-                                <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if construction.building.name == 'Tierras' or player.building('Tierras').quantity <= 0 %}disabled{% endif %} required />
+                                <input type="number" class="form-control" id="lands" name="lands" min="1" max="{{ player.building('Tierras').quantity }}" value="0" {% if player.building('Tierras').quantity <= 0 %}disabled{% endif %} required />
+                                <input type="hidden" id="construction" name="construction" value="{{ construction.id }}" {% if player.building('Tierras').quantity <= 0 %}disabled{% endif %} required />
                                 <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             </div>
                         </div>
                     </form>
+                    {% else %}
+                        <a class="btn btn-default" href="{{ path( 'archmage_game_territory_explore' ) }}"><i class="fa fa-fw fa-lg fa-search"></i><span class="hidden-xs">Explorar</span></a>
+                    {% endif %}
                 </div>
             </div>
         </div>
