--- a/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/research.html.twig
@@ -10,14 +10,10 @@
                 <h1><i class="fa fa-fw fa-graduation-cap"></i>Investigar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
         </div>
-        {% for research in player.researchs if
-            not research.active
-            and research.spell.faction == player.faction
-            and research.spell.magic <= 9999
-        %}
+        {% for research in player.researchs if not research.active %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ research.spell.faction.class }}">
-                <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-magic"></i><a href="{{ path('archmage_game_home_help') }}#{{ research.spell.name|slug }}" class="link">{{ research.spell.name }}</a></div>
+                <div class="panel-heading text-center">{% if research.spell.enchant %}<i class="fa fa-fw fa-lg fa-link"></i>{% else %}<i class="fa fa-fw fa-lg fa-magic"></i>{% endif %}<a href="{{ path('archmage_game_home_help') }}#{{ research.spell.name|slug }}" class="link">{{ research.spell.name }}</a></div>
                 <div class="panel-body text-responsive">
                     <div class="row">
                         <div class="col-xs-4">
@@ -48,10 +44,45 @@
                 </div>
             </div>
         </div>
+        {% endfor %}
+        {% for spell in spells if spell.faction == player.faction or spell.magic <= player.magic %}
+        <div class="col-xs-12 col-md-6">
+            <div class="panel panel-{{ spell.faction.class }}">
+                <div class="panel-heading text-center">{% if spell.enchant %}<i class="fa fa-fw fa-lg fa-link"></i>{% else %}<i class="fa fa-fw fa-lg fa-magic"></i>{% endif %}<a href="{{ path('archmage_game_home_help') }}#{{ spell.name|slug }}" class="link">{{ spell.name }}</a></div>
+                <div class="panel-body text-responsive">
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img class="custom-thumbnail" src="{{ asset( spell.image ) }}">
+                        </div>
+                        <div class="col-xs-8 text-padded">
+                            <div class="col-xs-6"><i class="fa fa-fw fa-magic"></i>{{ spell.magic|nf }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ spell.manaCost|nf }}</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>0</div>
+                            <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ spell.turnsResearch|nf }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ spell.skill.description|raw }}</div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer text-center">
+                    <form id="spell{{ spell.id }}" name="spell{{ spell.id }}" class="form-inline" data-toggle="validator" action="{{ path('archmage_game_magic_research') }}" method="post">
+                        <div class="form-group has-feedback">
+                            <div class="input-group">
+                                <div class="input-group-btn">
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i><span class="hidden-xs">Investigar</span></button>
+                                </div>
+                                <input type="number" class="form-control" id="turns" name="turns" min="1" max="{{ player.turns }}" value="0" required/>
+                                <input type="hidden" id="spell" name="spell" value="{{ spell.id }}" required />
+                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
         {% else %}
         <div class="container">
             <div class="col-xs-12 alert alert-danger text-center" role="alert">
-                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Ya no tienes nada más que investigar. Tal vez puedas comprar alguno más en el <i class="fa fa-fw fa-lg fa-user-secret"></i><a href="{{ path( 'archmage_game_kingdom_auction' ) }}">Mercado negro</a>.
+                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Ya no tienes nada nuevo que investigar. Tal vez puedas comprar alguno más en el <i class="fa fa-fw fa-lg fa-user-secret"></i><a href="{{ path( 'archmage_game_kingdom_auction' ) }}">Mercado negro</a>.
             </div>
         </div>
         {% endfor %}
