--- a/src/Archmage/GameBundle/Resources/public/css/style.css
+++ b/src/Archmage/GameBundle/Resources/public/css/style.css
@@ -77,6 +77,9 @@ h1 small, h2 small, h3 small, h4 small, h5 small, h6 small, .h1 small, .h2 small
 .label-extra {
     background-color: #000000;
 }
+.input-group-addon.label-full {
+    width: 50% !important;
+}
 .link {
     text-decoration: underline;
 }
@@ -199,6 +202,12 @@ body {
 div.dataTables_paginate, div.dataTables_filter {
     text-align: center !important;
 }
+table a {
+    text-decoration: none !important;
+}
+table a:hover {
+    text-decoration: underline !important;
+}
 /* NAVBAR PADDING FOR COLLAPSABLE COL-SM DEVICES */
 .nav > li > a {
     padding-left: 5px;
@@ -221,4 +230,3 @@ html {-webkit-text-size-adjust: none !important;}
 .fa {
     margin-right: 2px !important;
 }
-
