--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -10,7 +10,7 @@
                 <h1><i class="fa fa-fw fa-envelope"></i>Mensajes</h1>
             </div>
             {% if message is not defined %}
-            <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <table id="datatable" class="table table-striped table-bordered text-responsive" cellspacing="0" width="100%">
                 <thead>
                 <tr>
                     <th class="text-center"><i class="fa fa-fw fa-lg fa-calendar"></i><span class="hidden-xs">Fecha</span></th>
