--- a/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/ranking.html.twig
@@ -9,13 +9,12 @@
             <div class="page-header text-center">
                 <h1><i class="fa fa-fw fa-line-chart"></i>Ranking</h1>
             </div>
-            <table id="datatable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+            <table id="datatable" class="table table-striped table-bordered text-responsive" cellspacing="0" width="100%">
                 <thead>
                     <tr>
                         <th class="text-center"><i class="fa fa-fw fa-lg fa-list-ol"></i><span class="hidden-xs">Posición</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-lg fa-rocket"></i><span class="hidden-xs">Poder</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-lg fa-user"></i><span class="hidden-xs">Nick</span></th>
-                        <th class="text-center hidden-xs"><i class="fa fa-fw fa-lg fa-rebel"></i><span class="hidden-xs">Facción</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-lg fa-globe"></i><span class="hidden-xs">Tierras</span></th>
                         <th class="text-center"><i class="fa fa-fw fa-lg fa-shield"></i><span class="hidden-xs">Fortalezas</span></th>
                     </tr>
@@ -25,8 +24,7 @@
                     <tr>
                         <td class="text-right">{{ random(10)|nf }}</td>
                         <td class="text-right">{{ player.power|nf }}</td>
-                        <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': player.nick } ) }}">{{ player.nick }}</a></td>
-                        <td class="text-center hidden-xs">{{ player.faction.name }}</td>
+                        <td class="text-center"><span class="label label-{{ player.faction.class }}"><a href="{{ path('archmage_game_account_profile', { 'player': player.nick } ) }}">{{ player.nick }}</a></span></td>
                         <td class="text-right">{{ player.building('Tierras').quantity|nf }}</td>
                         <td class="text-right">{{ player.building('Fortalezas').quantity|nf }}</td>
                     </tr>
