--- a/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Army/attack.html.twig
@@ -14,25 +14,24 @@
                     <div class="col-xs-12 col-md-6">
                         <div class="panel panel-default">
                             <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-group"></i>Tropas</div>
-                            <div class="panel-body text-responsive">
-                                <div class="row">
+                            <div class="panel-body text-responsive text-right">
                                 {% for troop in player.troops %}
-                                    <div class="col-xs-6 text-right">
-                                        <span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a></span> [{{ troop.quantity|nf }}]
-                                    </div>
-                                    <div class="col-xs-6">
-                                        <div class="form-group has-feedback">
-                                            <div class="input-group">
-                                                <input type="number" class="form-control" id="{{ troop.id }}" name="{{ troop.id }}" min="0" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required/>
-                                                <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                                            </div>
+                                <div class="form-group has-feedback">
+                                    <div class="input-group">
+                                        <div class="input-group-addon">
+                                            <label for="{{ troop.id }}"><span class="label label-{{ troop.unit.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ troop.unit.name|slug }}">{{ troop.unit.name }}</a></span> [{{ troop.quantity|nf }}]</label>
                                         </div>
+                                        <input type="number" class="form-control" id="{{ troop.id }}" name="{{ troop.id }}" min="0" max="{{ troop.quantity }}" value="{{ troop.quantity }}" required/>
+                                        <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                                     </div>
-                                {% endfor %}
                                 </div>
+                                {% endfor %}
+                                {% for contract in player.contracts %}
+                                <span class="label label-{{ contract.hero.faction.class }}"><a href="{{ path('archmage_game_home_help') }}#{{ contract.hero.name|slug }}">{{ contract.hero.name }}</a></span>
+                                {% endfor %}
                             </div>
                             <div class="panel-footer text-center">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Atacar</button>
+                                Tropas que llevarás a la batalla, en este orden.
                             </div>
                         </div>
                     </div>
@@ -92,7 +91,7 @@
                                 </div>
                             </div>
                             <div class="panel-footer text-center">
-                                Si quieres, puedes utilizar un hechizo y un artefacto en la batalla.
+                                <button type="submit" class="btn btn-default"><i class="fa fa-fw fa-lg fa-hourglass-half"></i>Atacar</button>
                             </div>
                         </div>
                     </div>
