--- a/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Kingdom/summary.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-bar-chart"></i>Resumen<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns }}</small></h1>
+                <h1><i class="fa fa-fw fa-bar-chart"></i>Resumen<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
         </div>
         <div class="col-xs-12 col-md-6">
