--- a/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/artifact.html.twig
@@ -7,7 +7,7 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-joomla"></i>Activar artefactos<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
+                <h1><i class="fa fa-fw fa-joomla"></i>Activar artefacto<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
         </div>
         {% for item in player.items if item.quantity > 0 %}
@@ -50,8 +50,10 @@
             </div>
         </div>
         {% else %}
-        <div class="col-xs-12 alert alert-danger text-center" role="alert">
-            <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes artefactos en tu poder. Tal vez deberías comprar algunos en el <i class="fa fa-fw fa-lg fa-user-secret"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Mercado negro</a>.
+        <div class="container">
+            <div class="col-xs-12 alert alert-danger text-center" role="alert">
+                <i class="fa fa-fw fa-lg fa-exclamation-triangle"></i> Actualmente no tienes artefactos en tu poder. Tal vez deberías comprar algunos en el <i class="fa fa-fw fa-lg fa-user-secret"></i><a href="{{ path('archmage_game_kingdom_auction') }}">Mercado negro</a>.
+            </div>
         </div>
         {% endfor %}
     </div>
