--- a/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Magic/conjure.html.twig
@@ -10,7 +10,7 @@
                 <h1><i class="fa fa-fw fa-magic"></i>Conjurar<br><small><i class="fa fa-fw fa-hourglass"></i>{{ player.turns|nf }}</small></h1>
             </div>
         </div>
-        {% for research in player.researchs if research.active %}
+        {% for research in player.researchs if research.active and research.spell.magic <= player.magic %}
         <div class="col-xs-12 col-md-6">
             <div class="panel panel-{{ research.spell.faction.class }}">
                 <div class="panel-heading text-center"><i class="fa fa-fw fa-lg fa-magic"></i><a href="{{ path('archmage_game_home_help') }}#{{ research.spell.name|slug }}" class="link">{{ research.spell.name }}</a></div>
@@ -24,7 +24,7 @@
                             <div class="col-xs-6"><i class="fa fa-fw fa-tint"></i>{{ research.spell.manaCost|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass-half"></i>{{ research.turns|nf }}</div>
                             <div class="col-xs-6"><i class="fa fa-fw fa-hourglass"></i>{{ research.spell.turnsResearch|nf }}</div>
-                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ research.spell.skill.description }}</div>
+                            <div class="col-xs-12"><i class="fa fa-fw fa-joomla"></i>{{ research.spell.skill.description|raw }}</div>
                         </div>
                     </div>
                 </div>
