--- a/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/message.html.twig
@@ -7,7 +7,11 @@
     <div class="row">
         <div class="col-xs-12">
             <div class="page-header text-center">
-                <h1><i class="fa fa-fw fa-envelope"></i>Mensajes</h1>
+                <h1><i class="fa fa-fw fa-envelope"></i>Mensajes
+                {% if message is defined %}
+                    <br><small>{{ message.subject|truncate(20) }}</small>
+                {% endif %}
+                </h1>
             </div>
             {% if message is not defined %}
             <table id="datatable" class="table table-striped table-bordered text-responsive" cellspacing="0" width="100%">
@@ -22,8 +26,8 @@
                     {% for message in player.messages %}
                     <tr>
                         <td class="text-center">{{ message.datetime|date('d/m/Y H:i:s') }}</td>
-                        <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': message.who.nick|default('Admin') } ) }}">{{ message.who.nick|default('Admin') }}</a></td>
-                        <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a href="{{ path( 'archmage_game_account_message', { 'hash': message.hash } ) }}">{{ message.subject }}</a></td>
+                        <td class="text-center"><a href="{{ path('archmage_game_account_profile', { 'player': message.owner.nick|default('Admin') } ) }}">{{ message.owner.nick|default('Admin') }}</a></td>
+                        <td class="text-center"><i class="fa fa-fw fa-envelop"></i><a href="{{ path( 'archmage_game_account_message', { 'hash': message.hash } ) }}">{{ message.subject|truncate(20) }}</a></td>
                     </tr>
                     {% endfor %}
                 </tbody>
