--- a/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
+++ b/src/Archmage/GameBundle/Resources/views/Account/profile.html.twig
@@ -18,32 +18,27 @@
                     <span class="fa fa-fw fa-4x fa-user"></span>
                 </div>
                 <div class="info">
-                    <h1 class="text-center">{{ player.nick }}<small>#????</small></h1>
+                    <h1 class="text-center">{{ player.nick }}</h1>
                     <a href="{{ path('archmage_game_army_attack') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-flag"></i><span class="hidden-xs">Atacar</span></a>
                     <a href="{{ path('archmage_game_magic_conjure') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-magic"></i><span class="hidden-xs">Conjurar</span></a>
                     <a href="{{ path('archmage_game_account_message') }}" class="btn btn-default"><i class="fa fa-fw fa-lg fa-send"></i><span class="hidden-xs">Mensaje</span></a>
                 </div>
                 <br>
+                {% for progress in progresses %}
                 <div class="progress">
-                    <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
+                    <div class="progress-bar progress-bar-{{ progress.class }} progress-bar-striped" role="progressbar" aria-valuenow="{{ progress.researchs }}" aria-valuemin="0" aria-valuemax="{{ progress.total }}" style="min-width:4em; width: {{ progress.researchs/progress.total*100 }}%">
+                        <span>{{ progress.researchs }}/{{ progress.total }}</span>
                     </div>
                 </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
-                    </div>
+                {% endfor %}
+                <br/>
+                {% for i in 1..6 %}
+                <div class="col-xs-6 col-md-2 text-center">
+                    <i class="fa fa-fw fa-4x fa-trophy"></i>
+                    <br/>
+                    Logro
                 </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-warning progress-bar-striped" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
-                    </div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-danger progress-bar-striped" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
-                    </div>
-                </div>
-                <div class="progress">
-                    <div class="progress-bar progress-bar-primary progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="min-width:2em; width: {{ random(100) }}%">
-                    </div>
-                </div>
+                {% endfor %}
             </div>
         </div>
     </div>
